--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "dotenv": "^8.1.0",
+    "express": "^4.17.1",
+    "lodash": "^4.17.15",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "twit": "^2.2.11"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node ./server/App",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
