--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "keywords": [],
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.1.0",
+    "express": "^4.17.1",
+    "twit": "^2.2.11"
   },
   "devDependencies": {
     "eslint": "^6.3.0",
     "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^2.0.1",
     "prettier": "^1.18.2"
   }
 }
