--- a/src/package.json
+++ b/src/package.json
@@ -4,20 +4,19 @@
   "private": true,
   "dependencies": {
     "antd": "^3.23.2",
+    "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.1",
     "customize-cra": "^0.6.0",
-    "dotenv": "^8.1.0",
     "lodash": "^4.17.15",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
-    "react-app-rewired": "^2.1.3",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
     "redux-promise-middleware": "^6.1.1",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.0.0-beta.8",
-    "twit": "^2.2.11"
+    "styled-components": "^5.0.0-beta.8"
   },
   "proxy": "http://localhost:3001",
   "scripts": {
@@ -41,6 +40,7 @@
   "devDependencies": {
     "eslint": "^6.3.0",
     "eslint-plugin-react": "^7.14.3",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "react-app-rewired": "^2.1.3"
   }
 }
