--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "customize-cra": "^0.6.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
