--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "antd": "^3.23.2",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.1",
+    "cors": "^2.8.5",
     "customize-cra": "^0.6.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "lodash": "^4.17.15",
+    "passport-twitter": "^1.0.4",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
