--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.23.2",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.1",
+    "cors": "^2.8.5",
     "customize-cra": "^0.6.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
