--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "start-server": "node ./server/App.js",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject",
-    "heroku-postbuild": "npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+    "eject": "react-app-rewired eject"
   },
   "browserslist": {
     "production": [
