--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
+    "react-app-rewired": "^2.1.3",
     "react-dom": "^16.9.0",
     "react-infinite-scroll-component": "^4.5.3",
     "react-router-dom": "^5.0.1",
@@ -46,7 +47,6 @@
     "eslint": "^6.3.0",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^2.0.1",
-    "prettier": "^1.18.2",
-    "react-app-rewired": "^2.1.3"
+    "prettier": "^1.18.2"
   }
 }
