--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "customize-cra": "^0.6.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "http-proxy-middleware": "^0.20.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "lodash": "^4.17.15",
@@ -23,7 +24,6 @@
     "styled-components": "^5.0.0-beta.8",
     "twit": "^2.2.11"
   },
-  "proxy": "http://localhost:9000",
   "scripts": {
     "start": "react-app-rewired start",
     "start-server": "node ./server/App.js",
