--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "start-server": "node ./server/App.js",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject"
+    "eject": "react-scripts eject"
   },
   "browserslist": {
     "production": [
