--- a/package.json
+++ b/package.json
@@ -1,48 +1,17 @@
 {
-  "name": "twitter-image-gallery",
+  "name": "twitter-image-gallery-server",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "antd": "^3.23.2",
-    "axios": "^0.19.0",
-    "babel-plugin-import": "^1.12.1",
     "cors": "^2.8.5",
-    "customize-cra": "^0.6.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "http-proxy-middleware": "^0.20.0",
-    "less": "^3.10.3",
-    "less-loader": "^5.0.0",
     "lodash": "^4.17.15",
-    "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-app-rewired": "^2.1.3",
-    "react-dom": "^16.9.0",
-    "react-infinite-scroll-component": "^4.5.3",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1",
-    "styled-components": "^5.0.0-beta.8",
     "twit": "^2.2.11"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "start-server": "node ./server/App.js",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "yarn run start-server"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "start": "node ./server/App.js",
+    "heroku-postbuild": "cd client && yarn install && yarn install --only=dev --no-shrinkwrap && yarn run build"
   },
   "devDependencies": {
     "eslint": "^6.3.0",
