--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^2.0.1",
     "prettier": "^1.18.2"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
